src/ui/snapshots/starwire__ui__frames__add-feed.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / W I R E ════════════════════════════════════════════════════════════════════ sources ═╗
║                                                                                     add  refresh ║
║▸ sources                                                                      4 feeds · 5 unread ║
║● All                                                                                           5 ║
║○ Unread                                                                                        5 ║
║★ Starred                                                                                         ║
║▶ Videos                                                                                          ║
║⌕ Search…                                                                                         ║
║▸ Tech                                                                                          3 ║
║▸ YouTube                                                                                       1 ║
║  Phoronix                                                                                      1 ║
║                                                                                                  ║
║                                                                                                  ║
║                 ╔═ ADD A FEED ═════════════════════════════════════════════════╗                 ║
║                 ║›                                                             ║                 ║
║                 ║  https://… or @channel                                       ║                 ║
║                 ╚══════════════════════════════════════ enter add · esc cancel ╝                 ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ ENTRIES ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                ‹  unread  filter ║
║▸ choose a source                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ READER ═════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                 ‹  star  browser ║
║                                           nothing open                                           ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  enter open  l into  a add  R refresh  / filter                                           off
