src/ui/snapshots/starwire__ui__frames__article-pending.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / W I R E ════════════════════════════════════════════════════════════════════ sources ═╗
║                                                                                     add  refresh ║
║▸ sources › Tech › Hacker News                                                 4 feeds · 4 unread ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ ENTRIES — Hacker News ═══════════════════════════════════════════════════════════════ 2 unread ═╗
║                                                                                ‹  unread  filter ║
║▸ Hacker News › 2 of 3 · The page that has not arrived yet                                        ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ READER — The page that has not arrived yet ═══════════════════════════════════════ extracting… ═╗
║                                                                                 ‹  star  browser ║
║         The page that has not arrived yet                                                        ║
║         20 Sep 2026                                                                              ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                           extracting…                                            ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚═════════════════════════════════════════════════════ space page · n next · o<n> link · esc close ╝
? help  that entry has no link to pull                                  Hacker News · 2/3 · 33%  off
