src/ui/snapshots/starwire__ui__frames__article-pictures-loading.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / W I R E ════════════════════════════════════════════════════════════════════ sources ═╗
║                                                                                     add  refresh ║
║▸ sources › Phoronix                                                           4 feeds · 5 unread ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ ENTRIES — Phoronix ══════════════════════════════════════════════════════════════════ 1 unread ═╗
║                                                                                ‹  unread  filter ║
║▸ Phoronix › 2 of 2 · A post with pictures                                                        ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ READER — A post with pictures ══════════════════════════════════════════════════════════ ready ═╗
║                                                                                 ‹  star  browser ║
║         A post with pictures                                                                     ║
║         A N Other · phoronix.com · 18 Sep 2026 · 1 min                                           ║
║                                                                                                  ║
║         Two pictures, and some words to put them among.                                          █
║                                                                                                  █
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         █
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         ║
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         ║
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         ║
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         ║
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         ║
║                                                                                                  ║
║         The first is a real file in the replay directory; the second is carried in the           ║
║         markdown itself, which nothing fetches.                                                  ║
║                                                                                                  ║
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         ║
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         ║
║         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         ║
╚═════════════════════════════════════════════════════ space page · n next · o<n> link · esc close ╝
? help  space page  n next  m read  s star  o browser  y copy      Phoronix · 2/2 · 50%  half blocks
