src/ui/snapshots/starwire__ui__frames__article-terminal-60x21.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 60, 21)"
---
╔═ S T A R / W I R E ════════════════════════════ sources ═╗
║                                             add  refresh ║
║▸ sources › Tech › Hacker News         4 feeds · 4 unread ║
╚══════════════════════════════════════════════════════════╝
╔═ ENTRIES — Hacker News ═══════════════════════ 2 unread ═╗
║                                        ‹  unread  filter ║
║▸ Hacker News › 1 of 3 · Why the borrow checker says no:  ║
╚══════════════════════════════════════════════════════════╝
╔═ READER ═════════════════════════════════════════ ready ═╗
║                                         ‹  star  browser ║
║ Why the borrow checker says no: a field guide to         ║
║ lifetimes                                                ║
║ Jane Example · example.org · 20 Sep 2026 · 1 min         ║
║                                                          ║
║ The borrow checker is not a wall. It is a very patient   █
║ reviewer that has read the nomicon [1] and every &'a str ║
║ in your crate, and would like a word [2] about three of  ║
║ them.[^1]                                                ║
║                                                          ║
╚═════════════ space page · n next · o<n> link · esc close ╝
? help  space page  n next  m   Hacker News · 1/3 · 33%  off
