src/ui/snapshots/starwire__ui__frames__article-video.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / W I R E ════════════════════════════════════════════════════════════════════ sources ═╗
║                                                                                     add  refresh ║
║▸ sources › Videos                                                             4 feeds · 4 unread ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ ENTRIES — Videos ═══════════════════════════════════════════════════════════════════════════════╗
║                                                                                ‹  unread  filter ║
║▸ Videos › 1 of 1 · How a transistor works                                                        ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ READER — How a transistor works ════════════════════════════════════════════════════════ video ═╗
║                                                                                 ‹  star  browser ║
║         How a transistor works                                                                   ║
║         Veritasium · youtube.com · 19 Sep 2026 · 1 min                                           ║
║                                                                                                  ║
║         A hundred years of solid-state physics in twelve minutes, with a demonstration           ║
║         on a bench and one very patient oscilloscope.                                            ║
║                                                                                                  ║
║         v plays it                                                                               ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚═════════════════════════════════════════════════════ space page · n next · o<n> link · esc close ╝
? help  space page  n next  m read  s star  o browser  y copy               Videos · 1/1 · 100%  off
