src/ui/snapshots/starwire__ui__frames__entries-mocha-60x21.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 60, 21)"
---
╔═ S T A R / W I R E ════════════════════════════ sources ═╗
║                                             add  refresh ║
║▸ sources › Tech › Hacker News         4 feeds · 5 unread ║
╚══════════════════════════════════════════════════════════╝
╔═ ENTRIES — Hacker News ═══════════════════════ 3 unread ═╗
║                                        ‹  unread  filter ║
║▸ Hacker News › 1 of 3 · Why the borrow checker says no:  ║
║●  Why the borrow checker …field guide to lifetimes    2h ║
║●  The page that has not arrived yet                   3h ║
║●! Behind a paywall                                    4h ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
╚══════════════════════════════════════════════════════════╝
╔═ READER ═════════════════════════════════════════════════╗
║                                         ‹  star  browser ║
║                       nothing open                       ║
╚══════════════════════════════════════════════════════════╝
? help  enter read  m read  s s  Hacker News · 1/3 · 0%  off
